plural/istio-managing-apps-kubernetes/04/demos/demo1/mutual-tls-istio-auth.yaml

# this is needed beacuse once above policy is applied all clients need to send tls for conversation.
# In Destination we configure client send tls = ISTIO_MUTUAL
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: default
  namespace: default
spec:
  host: "*.default.svc.cluster.local"
  trafficPolicy:
    tls:
      mode: ISTIO_MUTUAL
---
